# tech-hub-rust

./: .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  config.yaml  fuzzing.yaml  general.yml
.cargo/: audit.toml  deny.toml
.sqlx/: query-05ae514b9cc9ff9446e008daa98a8c41c044972c2d2b5ee3a4d9ef5a89b9f34f.json  query-1587cb8299679d15301580b0340e967e3a47774b5eca793a0be38a738a390ca1.json  query-1c32db00d78150794187894d9ae93eac866cf76a92dc11b6400c21eacf19ca8c.json  query-1cd1a1af9979a68bd23f9213d644dc00c3f7ed1944a5e62fb3f91133cca98d65.json  query-1cfa84e5f2faa87b0f95f5004ff8b5963e161d876435a1a99cdb1d20e66bc8bb.json  query-315bcf73057894b73a7d175f96f78f18bae8f1a1f9d941decd1b6cdf41e26b7f.json  query-409d1e0407d0256f81a0f2df4fc5789846cbac3ab1e44769ab3b775d0d157a46.json  query-50f5bc4e43aa968c1a44bb83c80b43074e959e19263f87c21cf6c574a5a0f22e.json  query-573eae4c1b566f5243b6b0df850e8dd8e1537756341f7fd8cf5d87d84edd8e3c.json  query-5ec0851d68cbb811584093ae8fac7165c8c3a9b1881ddf93a7f5cdd9db987fe1.json  query-635b7a9553cc62e78889f532238be9fbd46447282d8b17d32ada4d387752a27e.json  query-6399aa89fcb1c3e0928c721bb5a46056890d41cd3d0b36fbb1d7137a55e6ab9a.json  query-6492346a1fd87d9c69a5329744e5eb867727e0364fa605fb0a6cf44bf2e954f0.json  query-6630cf4459a55bb06aea3aa4d4fafadf145215644598488c257eae6201096a0a.json  query-664e48ad6320d90060fa6a1d3d384c12d8500ad8688ed067cfc1979fefcb5c4d.json  query-673d1506c7d2b7b0b4574c2e01c6ae358c2ce5a23a0c308f9bfe2ed488e90b72.json  query-6e4fc37bb48713b72168f44382cc3701f84756c55eff2ef42dff2bf3445a59fd.json  query-6ffcd311587dbea171c838a1f3ab90b4cad8522e7193a36a18ed33355bb1f701.json  query-7474957c0985e579843ffbbe61e93e69efa80b591018ba8d7b852c7d04705011.json  query-76c37aed868866ddbe545e16f6127e945a8422dfff2d78bb3eceb16a460bcb05.json  query-7e0da7b17555a4a5207a4a7f5bf0e2dc24a49b234a50ce0a457c3dfb04d93942.json  query-82a34b29bfbd5224269263b0baed1209acd9bfe1f69e4dbbc8ca66830fcaefdf.json  query-8957a5b9373fde547128e3982d7088b0ebf3256bd860e63311321131a9d07c09.json  query-89ff46dcb433f45dedfe2f0cc772997c036d416ddb74eeccb6a7b4d35c3632ea.json  query-8d9dbf2cd556443e5b828f900e570013a21de56a53a1759a5f9be1f1b737d12f.json  query-8f9cb149aef5511a2a9cab1fc51b1ee584f0dcb5d430093bf644b3affa93ec5e.json  query-9f103f7d6dfa569bafce4546e6e610f3d31b95fe81f96ea72575b27ddfea796e.json  query-a266fd6a0f2ae75be4145bd2cf3390d76e5267e376468af725750a7e61a70dea.json  query-a34dbb3ed1615e275c8ca67f2ef32a474f4703f75d86aa9430821b007c662746.json  query-a75e66b96ba9b75b72ee1a9a428d6ddf6f7df09647ff4f553ea2ca987adf2b7e.json  query-abaa3660e5576bd18eb9d20558962ecf55231746798f50362d1c5248392d54ce.json  query-ac15d418cedb49a2c90cc7ec8342f16789013c1094645156dc3923b509e01c8d.json  query-afc020721b1e020b848e01609ba3982273b0b42dd946baad123aa5e1e80646bc.json  query-b0b6c98999add2a3ad5739b43c0a658c4c8bb29c104981aceed6aa1e7c5f5ba5.json  query-b9952b686c7e2389578966845fe1cd7525e3f8c771219c74fd3cf6d4ab27624e.json  query-bbae7173783740faea650256a6d392e245d3f12abec2717632b2ed2fba35a9af.json  query-bd2eb58b06d406d708e5e7851dd9c1fafdc5ed457cbf1a516460ed7675e5e4d5.json  query-c0755f611d9765bc2f3072ae42e63633a34d70f1d74cf2942a4f5f1ffee51dc5.json  query-c0bbd40008ef1fac0c27550d58f21bbdca85327cbcf3e1837ea33246b6770ea3.json  query-c1150249bf3d36e9e7f56a15cf9fce09a7ef0d22dabeb78b2bc702db073df028.json  (+10 more)
configuration/: base.yaml  production.yaml
fuzz/: Cargo.toml  README.md  dictionary.txt
fuzz/fuzz_targets/authentication/: fuzz_login_json.rs  fuzz_password_grapheme_counting.rs  fuzz_register_json.rs  fuzz_user_email.rs  fuzz_user_email_unicode.rs  fuzz_user_password.rs
fuzz/fuzz_targets/comments/: fuzz_comment_json.rs
fuzz/fuzz_targets/newsletter/: fuzz_newsletter_json.rs
fuzz/fuzz_targets/posts/: fuzz_post_json.rs
migrations/: 20250713012834_create_users_table.sql  20250907112704_create_tokens_table.sql  20251008133906_seed_admin_user.sql  20251010114738_create_idempotency_table.sql  20251012124129_create_newsletter_issues_table.sql  20251012125351_create_issue_delivery_queue_table.sql  20251013073810_create_posts_table.sql  20251013074232_create_comments_table.sql  20251013075514_create_indexes.sql  20251014132750_deleted_at_column_posts_table.sql
proptest-regressions/domain/comment/: new_comment.txt
proptest-regressions/domain/post/: new_post.txt
proptest-regressions/domain/user/: user_name.txt
scripts/: init_db.sh  init_redis.sh
scripts/fuzz/: fuzz_authentication.sh  fuzz_comments.sh  fuzz_newsletter.sh  fuzz_posts.sh  setup_fuzz_corpus.sh
src/: authentication.rs  configuration.rs  email_client.rs  lib.rs  main.rs  newsletter_delivery_worker.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: mod.rs  new_user.rs  user_email.rs  user_name.rs
src/domain/comment/: comment_text.rs  mod.rs  new_comment.rs  types.rs
src/domain/newsletter/: mod.rs  new_newsletter.rs  newsletter_content.rs  newsletter_html.rs  newsletter_text.rs  newsletter_title.rs  types.rs
src/domain/post/: get_all_posts.rs  img.rs  mod.rs  new_post.rs  post.rs  post_img.rs  post_text.rs  post_title.rs  requests.rs  text.rs  title.rs  types.rs
src/domain/user/: mod.rs  new_user.rs  types.rs  user_email.rs  user_name.rs  user_password.rs
src/idempotency/: key.rs  mod.rs  persistence.rs
src/repository/: comment.rs  idempotency.rs  mod.rs  newsletter.rs  post.rs  token.rs  user.rs
src/routes/: helpers.rs  login.rs  mod.rs  news_letters.rs  password_reset.rs  subscriptions.rs  user.rs  user_confirm.rs  user_register.rs  user_subscribe.rs
tests/: health_check.rs
tests/api/: comment.rs  get_all_posts.rs  health_check.rs  helpers.rs  idempotency.rs  login.rs  main.rs  news_letter.rs  password_reset.rs  post.rs  user.rs  user_confirm.rs  user_register.rs  user_subscribe.rs
(+43 files in other folders)
