[package]
name = "moodfeed"
version = "0.1.0"
authors = ["Athfan Fasee <aththaar47@gmail.com>"]
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path  = "src/main.rs"
name = "moodfeed"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}
serde_json = "1.0.140"
config = { version = "0.15.13", default-features = false, features = ["yaml"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
uuid = { version = "1", features = ["v4"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.7"




[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }