[package]
name = "techhub"
version = "0.1.0"
authors = ["Athfan Fasee <aththaar47@gmail.com>"]
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "techhub"

[dependencies]
actix-web = "4.11.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"
config = { version = "0.15.13", default-features = false, features = ["yaml"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.7"
unicode-segmentation = "1"
claims = "0.8.0"
validator = "0.20.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies"] }
url = "2.0"
rand = { version = "0.8", features = ["std_rng"] }
thiserror = "2.0.16"
anyhow = "1"
argon2 = { version = "0.5", features = ["std"] }
base64 = "0.22.1"
actix-session = { version = "0.10", features = ["redis-session-rustls"] }


[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1"
fake = "2.9"
wiremock = "0.6"
serde_json = "1"
linkify = "0.10"