[package]
name = "techhub-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.3", features = ["derive"] }
serde_json = "1.0.145"

[dependencies.techhub]
path = ".."

# Authentication domain fuzzers
[[bin]]
name = "fuzz_user_email"
path = "fuzz_targets/authentication/fuzz_user_email.rs"
test = false
doc = false

[[bin]]
name = "fuzz_user_password"
path = "fuzz_targets/authentication/fuzz_user_password.rs"
test = false
doc = false

[[bin]]
name = "fuzz_user_email_unicode"
path = "fuzz_targets/authentication/fuzz_user_email_unicode.rs"
test = false
doc = false

[[bin]]
name = "fuzz_password_grapheme_counting"
path = "fuzz_targets/authentication/fuzz_password_grapheme_counting.rs"
test = false
doc = false

[[bin]]
name = "fuzz_login_json"
path = "fuzz_targets/authentication/fuzz_login_json.rs"
test = false
doc = false

[[bin]]
name = "fuzz_register_json"
path = "fuzz_targets/authentication/fuzz_register_json.rs"
test = false
doc = false

[[bin]]
name = "fuzz_comment_json"
path = "fuzz_targets/comments/fuzz_comment_json.rs"
test = false
doc = false

[[bin]]
name = "fuzz_newsletter_json"
path = "fuzz_targets/newsletter/fuzz_newsletter_json.rs"
test = false
doc = false

[[bin]]
name = "fuzz_post_json"
path = "fuzz_targets/posts/fuzz_post_json.rs"
test = false
doc = false